fixed overflow component

--- a/css/chat.css
+++ b/css/chat.css
@@ -53,7 +53,7 @@ nav {
 
 .overlay {
   width: 30%;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: flex-end;
   background-color: #1c1c1c;
