--- a/css/quality.css
+++ b/css/quality.css
@@ -62,6 +62,7 @@ nav {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.10);
   padding: 20px;
   border: 1px solid #2e2e2e;
+  min-height: 100vh;
 }
 /* 60% width*/
 
